Bug 408494 - AqBanking File Import does not allow to select account
Summary: AqBanking File Import does not allow to select account
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: importer (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-06-09 17:23 UTC by Thomas Baumgart
Modified: 2019-06-10 09:53 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.0.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Baumgart 2019-06-09 17:23:31 UTC
SUMMARY
It seems that as soon as an AqBanking mapping for one account exists to an online account it is used for the CSV import of data destined for another account without any possibility for the user to select that second account. If no such online mapping exists a dialog to select the account is presented to the user.

STEPS TO REPRODUCE
1. Map one account to an online account
2. Use the File/Import/AqBanking CSV importer to import data for a second account

OBSERVED RESULT
Data gets imported into the first (online mapped) account

EXPECTED RESULT
User gets a chance to select the account into which the data shall be imported

ADDITIONAL INFORMATION
Workaround: Use the KMyMoney CSV Importer instead.
Comment 1 Thomas Baumgart 2019-06-10 09:53:42 UTC
Git commit 7b0c97ed6df1564bdd1f53aa7d99d144195652ff by Thomas Baumgart.
Committed on 10/06/2019 at 09:53.
Pushed by tbaumgart into branch '5.0'.

Use mapped account only if information is present

Using the AqBanking file importer may not provide information about the
account the imported data relates to. In this case, it does not make
sense to search for an online mapping. Doing so leads to false results,
as without values for account or routing number the first mapped account
will be selected which is wrong.

This change does not try the mapping if both values are empty and allows
the user to select the account as part of the process.
FIXED-IN: 5.0.5

M  +5    -2    kmymoney/plugins/kbanking/kbanking.cpp

https://commits.kde.org/kmymoney/7b0c97ed6df1564bdd1f53aa7d99d144195652ff